Downloading the json file from ChromeReader is tried several times when ERR_NETWORK_CHANGED or 5xx HTTP error occurs.

BUG=593357

Review URL: https://codereview.chromium.org/1789513003

Cr-Commit-Position: refs/heads/master@{#383701}

Former-commit-id: 174facf59a38990ca2a9594404df601a43756c9d